--- a/pom.xml
+++ b/pom.xml
@@ -160,17 +160,16 @@
             <version>4.1.1.RELEASE</version>
         </dependency>
 
-        <!--jUnit-->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-        </dependency>
-
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.4.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>uk.ac.ebi.pride.utilities</groupId>
+            <artifactId>pride-utilities</artifactId>
+            <version>2.0.4-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
